Refresh devices view every 5 seconds

--- a/public/styles/devices.less
+++ b/public/styles/devices.less
@@ -6,7 +6,8 @@
   align-items: flex-start;
   margin-left: -10px;
   margin-right: -10px;
-  margin-bottom: 20px;
+  margin-top: -10px;
+  margin-bottom: 10px;
 }
 
 .device-grid-item {
