--- a/public/views/app.devices.html
+++ b/public/views/app.devices.html
@@ -58,6 +58,6 @@
   </div>
 
   <div class="panel-body text-center" ng-show="nearbyDevices.length === 0">
-    No nearby devices found. Please refresh to try again.
+    No nearby devices found.
   </div>
 </div>
