--- a/public/views/config.cloud.html
+++ b/public/views/config.cloud.html
@@ -18,8 +18,12 @@
           </div>
         </div>
       </div>
+      <div ng-if="form.platform === 'FIWARE'">
+	      <p>{{form.platform}}</p>
+      </div>
       <p ng-hide="!form.platform">Set the KNoT Cloud server address that this gateway will connect to. This is the server where your device data and user credentials will be stored.</p>
       <form ng-hide="!form.platform" name="cloudForm" class="form-horizontal" novalidate>
+        <p ng-hide="form.platform !== 'FIWARE'">Orion</p>
         <div class="form-group ng-class:{ 'has-error': cloudForm.hostname.$invalid && !cloudForm.hostname.$pristine }">
           <label for="hostname" class="col-sm-2 col-sm-offset-2 control-label">Hostname</label>
           <div class="col-sm-6">
@@ -32,7 +36,25 @@
           <div class="col-sm-6">
             <input type="number" id="port" name="port" class="form-control" placeholder="Port" ng-model="form.port" ng-disabled="$api.$pending" min="0" max="65535" required>
           </div>
+	      </div>
+
+        <div ng-if="form.platform === 'FIWARE'">
+            <p ng-hide="form.platform !== 'FIWARE'">IoT Agent</p>
+            <div class="form-group ng-class:{ 'has-error': cloudForm.iothostname.$invalid && !cloudForm.hostname.$pristine }">
+              <label for="hostname" class="col-sm-2 col-sm-offset-2 control-label">Hostname</label>
+              <div class="col-sm-6">
+                <input type="text" id="hostname" name="hostname" class="form-control" placeholder="Host name" ng-model="form.hostname" ng-disabled="$api.$pending" hostname required>
+              </div>
+            </div>
+    
+            <div class="form-group ng-class:{ 'has-error': cloudForm.port.$invalid && !cloudForm.port.$pristine }">
+              <label for="port" class="col-sm-2 col-sm-offset-2 control-label">Port</label>
+              <div class="col-sm-6">
+                <input type="number" id="port" name="port" class="form-control" placeholder="Port" ng-model="form.port" ng-disabled="$api.$pending" min="0" max="65535" required>
+              </div>
+            </div>	    
         </div>
+
       </form>
 
       <nav>
