--- a/public/views/config.cloud.html
+++ b/public/views/config.cloud.html
@@ -71,49 +71,8 @@
               <input type="number" id="port-orion" name="port-orion" class="form-control" placeholder="1026" ng-model="form.orion.port" ng-disabled="$api.$pending" min="0" max="65535" required>
             </div>
           </div>
-          <hr>
-          <p class="text-center">Security configuration</p>
-          <p>Set the KeyRock Identity Manager address. This is the service that will protect your FIWARE application.</p>
-          <br>
-          <div class="form-group ng-class:{ 'has-error': cloudForm.keyrock.hostname.$invalid && !cloudForm.keyrock.hostname.$pristine }">
-            <label for="hostname" class="col-sm-2 col-sm-offset-2 control-label">Hostname</label>
-            <div class="col-sm-6">
-              <input type="text" id="hostname-keyrock" name="hostname-keyrock" class="form-control" placeholder="localhost" ng-model="form.keyrock.hostname" ng-disabled="$api.$pending" hostname required>
-            </div>
-          </div>
-          <div class="form-group ng-class:{ 'has-error': cloudForm.keyrock.port.$invalid && !cloudForm.keyrock.port.$pristine }">
-            <label for="port" class="col-sm-2 col-sm-offset-2 control-label">Port</label>
-            <div class="col-sm-6">
-              <input type="number" id="port-keyrock" name="port-keyrock" class="form-control" placeholder="5000" ng-model="form.keyrock.port" ng-disabled="$api.$pending" min="0" max="65535" required>
-            </div>
-          </div>
-          <br>
-          <p>Set the FIWARE application authentication parameters and authorization code. The FIWARE documentation explains how to get these parameters and generate the code:
-          <a href="https://fiware-idm.readthedocs.io/en/latest/user_guide/#user-guide" target="_blank">see here</a>.</p>
-          <br>
-          <div class="form-group ng-class:{ 'has-error': cloudForm.clientId.$invalid && !cloudForm.clientId.$pristine }">
-            <label for="client-id" class="col-sm-2 col-sm-offset-2 control-label">Client Id</label>
-            <div class="col-sm-6">
-              <input type="text" id="client-id" name="client-id" class="form-control" placeholder="c2625835-814a-44ed-a59f-d0b65b175c9f" ng-model="form.clientId" ng-disabled="$api.$pending" required>
-            </div>
-          </div>
-          <div class="form-group ng-class:{ 'has-error': cloudForm.clientSecret.$invalid && !cloudForm.clientSecret.$pristine }">
-            <label for="client-secret" class="col-sm-2 col-sm-offset-2 control-label">Client Secret</label>
-            <div class="col-sm-6">
-              <input type="text" id="client-secret" name="client-secret" class="form-control" placeholder="4d9dd505-a46e-4128-9ec0-32a09b57feb1" ng-model="form.clientSecret" ng-disabled="$api.$pending" required>
-            </div>
-          </div>
-          <div class="form-group ng-class:{ 'has-error': cloudForm.callbackUrl.$invalid && !cloudForm.callbackUrl.$pristine }">
-            <label for="callback-url" class="col-sm-2 col-sm-offset-2 control-label">Callback URL</label>
-            <div class="col-sm-6">
-              <input type="text" id="callback-url" name="callback-url" class="form-control" placeholder="https://client.example.com" ng-model="form.callbackUrl" ng-disabled="$api.$pending" required>
-            </div>
-          </div>
-          <div class="form-group ng-class:{ 'has-error': cloudForm.code.$invalid && !cloudForm.code.$pristine }">
-            <label for="code" class="col-sm-3 col-sm-offset-1 control-label">Authorization Code</label>
-            <div class="col-sm-6">
-              <input type="text" id="code" name="code" class="form-control" placeholder="SplxlOBeZQQYbYS6WxSbIA" ng-model="form.code" ng-disabled="$api.$pending" required>
-            </div>
+          <div class="checkbox col-sm-offset-3">
+            <label><input type="checkbox" ng-model="form.disableSecurity" ng-checked="form.disableSecurity">Check this option to disable setup FIWARE security components</label>
           </div>
         </div>
       </form>
